# mz-explode

./: .gitignore  CLAUDE.md  CMakeLists.txt  Doxyfile.in  MIGRATION_STRATEGY.md  ProjectHome.md  README.md
src/explode/: CMakeLists.txt  byte_order.hh  exceptions.cc  exceptions.hh  exe_file.cc  exe_file.hh  io.cc  io.hh  knowledge_dynamics.cc  knowledge_dynamics.hh  struct_reader.hh  unexepack.cc  unexepack.hh  unlzexe.cc  unlzexe.hh  unpklite.cc  unpklite.hh
src/libexe/: CMakeLists.txt  bit_reader.hpp  bound_import_directory.cpp  com_descriptor.cpp  debug_directory.cpp  executable_factory.cpp  executable_file.cpp  knowledge_dynamics_decompressor.cpp  le_file.cpp  load_config_directory.cpp  lzexe_decompressor.cpp  mz_file.cpp  ne_file.cpp  ne_segment_parser.cpp  pe_file.cpp  pe_section_parser.cpp  pklite_decompressor.cpp  security_directory.cpp
src/libexe/core/: data_source.cpp  diagnostic.cpp  entropy.cpp  file_utils.hpp  utf_convert.hpp  utils.hpp
src/libexe/decompressors/: bit_reader.hpp  decompressor_factory.cpp  diet_decompressor.cpp  exepack_decompressor.cpp  knowledge_dynamics_decompressor.cpp  lzexe_decompressor.cpp  pklite_decompressor.cpp
src/libexe/formats/: README.md  common.ds  exe_format_complete.ds  mz.ds
src/libexe/formats/le/: le_header.ds
src/libexe/formats/ne/: ne_header.ds
src/libexe/formats/pe/: pe_bound_imports.ds  pe_com_descriptor.ds  (+11 more)
src/libexe/parsers/: architecture_directory_parser.cpp  base_relocation_parser.cpp  bound_import_directory_parser.cpp  com_descriptor_parser.cpp  debug_directory_parser.cpp  delay_import_directory_parser.cpp  exception_directory_parser.cpp  export_directory_parser.cpp  global_ptr_directory_parser.cpp  iat_directory_parser.cpp  import_directory_parser.cpp  load_config_directory_parser.cpp  reserved_directory_parser.cpp  rich_header_parser.cpp  security_directory_parser.cpp  tls_directory_parser.cpp
src/libexe/pe/: authenticode.cpp  overlay.cpp
src/libexe/resources/: ne_resource_directory.cpp  pe_resource_directory.cpp  resource.cpp
test/: CMakeLists.txt
test/core/: test_diagnostics.cpp
test/explode/: test_exepack.cpp
test/formats/: test_architecture_parser.cpp
test/le/: test_le_resource.cpp  test_lx_real.cpp
test/ne/: test_progman.cpp
test/pe/: test_corkami_corpus.cpp  test_corkami_generated.cpp  test_corkami_validation.cpp  test_pe64.cpp  test_rich_parser.cpp  test_security_analysis.cpp
test/pe/directories/: test_bound_import_parser.cpp  test_com_descriptor_parser.cpp  test_exception_parser.cpp  test_iat_parser.cpp  test_reserved_parser.cpp
test/resources/: test_bitmap_message_parsers.cpp  test_dialog_parser.cpp  test_icon_parsers.cpp  test_pe_resources.cpp
test/test_helpers/: md5.c  pe_test_builder.hpp
tools/: CMakeLists.txt  debug_pe.cpp  generate_tests_from_json.py
tools/exeinfo/: CMakeLists.txt  main.cpp
trunk/: CMakeLists.txt
trunk/docs/: unexepack.c
trunk/src/explode/: CMakeLists.txt  byte_order.hh  exceptions.hh  exe_file.cc  exe_file.hh  io.cc  io.hh  knowledge_dynamics.cc  knowledge_dynamics.hh  proper_export.hh  unexepack.hh  unlzexe.cc  unlzexe.hh  unpklite.cc  unpklite.hh
trunk/src/mzdump/: CMakeLists.txt  main.cc
trunk/src/mzexplode/: CMakeLists.txt  main.cc
trunk/src/unittest/: lex.cc  main.cc  md5.c  md5.h  pklite_112.cc  pklite_150.cc  pklite_201.cc  pklite_E_115.cc  z90.cc  z91e.cc
trunk/src/unlzexe/: CMakeLists.txt  main.cc
trunk/src/unpklite/: CMakeLists.txt
unittests/: CMakeLists.txt  legacy_data_wrapper.cpp  main.cpp  test_architecture_parser.cpp  test_bit_reader.cpp  test_bound_import_parser.cpp  test_com_descriptor_parser.cpp  test_corkami_corpus.cpp  test_corkami_generated.cpp  test_corkami_validation.cpp  test_debug_parser.cpp  test_delay_import_parser.cpp  test_exception_parser.cpp  test_executable_factory.cpp  test_exepack_vs_legacy.cpp  test_export_parser.cpp  test_global_ptr_parser.cpp  test_iat_parser.cpp  test_import_parser.cpp  test_knowledge_dynamics_decompress.cpp  test_knowledge_dynamics_vs_legacy.cpp  test_legacy_data.cpp  test_load_config_parser.cpp  test_lzexe_decompress.cpp  test_lzexe_vs_legacy.cpp  test_mz_parser.cpp  test_ne_parser.cpp  test_pe_parser.cpp  test_pklite_decompress.cpp  test_pklite_vs_legacy.cpp  test_progman.cpp  test_relocation_parser.cpp  test_reserved_parser.cpp  test_section_parsers.cpp  test_security_parser.cpp  test_tcmadm64_parser.cpp  test_tls_parser.cpp
unittests/core/: test_diagnostics.cpp
unittests/explode/: test_bit_reader.cpp  test_exepack.cpp  test_knowledge_dynamics.cpp  test_lzexe.cpp  test_pklite.cpp
unittests/explode/testdata/: dot.cc  exepack_hello.cc  exepack_masm400.cc  exepack_masm500.cc  exepack_masm510.cc  pklite_100.cc  pklite_120.cc  pklite_E_112.cc  pklite_E_120.cc  tntega.cc  z91.cc
unittests/formats/: data_wrapper.cpp  test_architecture_parser.cpp  test_executable_factory.cpp  test_le_decompress.cpp  test_le_fixup.cpp  test_le_resource.cpp  test_mz_parser.cpp  test_ne_font.cpp  test_ne_parser.cpp  test_pe32.cpp  test_pe64.cpp  test_pe_parser.cpp  test_progman.cpp
unittests/formats/testdata/: 7z_lx.cc  cga40woa_fon.cc  cmd_lx.cc  makeini_lx.cc  progman.cc  strace_lx.cc  tcmadm64.cc  tcmdx32.cc
unittests/le/: test_le_decompress.cpp  test_le_entry.cpp  test_le_import.cpp  test_le_resource.cpp  test_le_strip.cpp
unittests/ne/: test_ne_font.cpp  test_progman.cpp
unittests/pe/: test_corkami_generated.cpp  test_corkami_validation.cpp  test_pe32.cpp  test_section_parsers.cpp  test_security_analysis.cpp
unittests/pe/directories/: test_com_descriptor_parser.cpp  test_debug_parser.cpp  test_delay_import_parser.cpp  test_global_ptr_parser.cpp  test_iat_parser.cpp  test_import_parser.cpp  test_relocation_parser.cpp  test_security_parser.cpp
unittests/resources/: test_dialog_parser.cpp  test_font_parsers.cpp  test_icon_parsers.cpp  test_menu_parser.cpp  test_ne_resources.cpp  test_os2_resource_parser.cpp  test_pe_resources.cpp  test_string_accelerator_parsers.cpp  test_version_manifest_parsers.cpp
unittests/test_helpers/: pe_test_builder.hpp  test_data.hpp  test_fixtures.hpp
(+172 files in other folders)
